--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -5,8 +5,8 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #222E50   ;
-  --secondary-color: #71916B ;
+  --primary-color: #e9eef7 ;
+  --secondary-color: #222E50 ;
   --accent1-color: #2A4849;
   --accent2-color: #2A4849;
 
