--- a/wwr/styles/styles-wwr.css
+++ b/wwr/styles/styles-wwr.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:wght@400;700&display=swap');
+* {
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:wght@400;700&family=Roboto&display=swap'); /* Including Roboto as an additional font */
 
 #content {
     max-width: 1600px;
@@ -41,7 +45,7 @@ body {
 }
 
 .home-title {
-    font-family: 'IM Fell French Canon', serif;
+    font-family: 'IM Fell French Canon', 'Roboto', serif; /* Added 'Roboto' as a third font */
     font-size: 2em; /* Twice the default font size */
     margin-top: 10px;
 }
